welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:5: error: illegal start of simple expression
}
^Program:8: error: 'while' expected but '}' found.
	}
        ^